# csg-explorer

./: .gitignore  CMakeLists.txt  csg.h  dual.h  parser.h  python_binding.cpp  readme.md  sdf.h  test.csg
apps/: yocto_opengl.h  yscnitraces.cpp
python_binding/: CMakeLists.txt  python_binding.cpp  test.csg  test.py
scripts/: release.py
source/: csg.h  expected.hpp  main.cpp  parser.h
source/ext/yocto-gl/: CMakeLists.txt
source/ext/yocto-gl/apps/: yimshproc.cpp  yimshproc.h  yocto_opengl.cpp  yscnitraces.cpp
source/ext/yocto-gl/yocto/: yocto_trace.cpp  yocto_trace.h
tests/: features1.yaml  test.csg
yocto/: yocto_trace.cpp  yocto_trace.h
