cmake_minimum_required (VERSION 3.9)
project (michelangelo)
# option(YOCTO_OPENGL “Build OpenGL apps” ON)
# option(YOCTO_EMBREE “Use Intel’s Embree raytracer” ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  set(CMAKE_BUILD_TYPE “Release”)
endif()
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

# include_directories(“${PROJECT_SOURCE_DIR}/../yocto-gl”)
add_subdirectory (source/ext/yocto-gl)
include_directories (source/ext)
add_executable(main source/main.cpp)
target_link_libraries(main yocto yocto_opengl ${OPENGL_gl_LIBRARY} ${GLFW_LIBRARY} ${GL_EXTRA_LIBRARIES})